added the delegate

--- a/MVC+Delegation-Review-Lab/MVC+Delegation-Review-Lab/Base.lproj/Main.storyboard
+++ b/MVC+Delegation-Review-Lab/MVC+Delegation-Review-Lab/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="haQ-jF-XkD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="haQ-jF-XkD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -101,7 +101,7 @@
                                 </connections>
                             </stepper>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=".." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2GB-ao-XqY">
-                                <rect key="frame" x="20" y="625" width="374" height="21"/>
+                                <rect key="frame" x="20" y="625" width="374" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -121,6 +121,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="xk3-K6-oqv"/>
                     <connections>
+                        <outlet property="button" destination="Wle-Vg-2qp" id="BfY-AJ-rHK"/>
                         <outlet property="fontSlider" destination="RaA-x6-s6r" id="bjl-Wd-Eg5"/>
                         <outlet property="fontStepper" destination="2J0-pe-Vr4" id="AAT-wi-0x0"/>
                         <outlet property="fontUpdatingLabel" destination="2GB-ao-XqY" id="aGg-eb-22I"/>
